# Yuhan

C_Language/DAY004/: .exam04.c.un~  .lecture04.c.un~  HelloWorld.c  exam04.c~  lecture04.c  lecture04.c~
C_Language/DAY005/: Dino.c  DinoRun.c
C_Language/DAY006/: main.c
C_Language/DAY007/: main.c
C_Language/DAY010/: DinoRun.c  ToDo.txt  main.c
C_Language/homework001/: 김동현(202327005)C프로그래밍_1반.hwp
ComputerHangul/: 기본예제 26.hwp  빈문서.hwp  커피 연구.hwp
ComputerHangul/DAY008/: 7-1 202327005 김동현.hwpx  7-3 202327005 김동현.hwpx  7-3.hwpx
ComputerHangul/DAY011/: 기본예제 17.pptx  기본예제 18.pptx  프레젠테이션1.pptx
ComputerHangul/DAY012/: 202327005.pptx
ComputerHangul/Week14/: 202327005.pptx  프레젠테이션1.pptx  프레젠테이션2.pptx
ComputerHangul/week6/: 202327005_수식포함.hwp  기본예제 33.hwp  기본예제 35.hwp  기본예제 36.hwp  기본예제 37.hwp  기본예제 38.hwp  종합예제.hwp  표 창 장.hwpx  표창장 데이터.hwp
ComputerHangul/기말고사/: 김동현(202327005)A.pptx
ComputerHangul/실습예제(파워포인트1)/: 기본예제 04.pptx  기본예제 05.pptx  기본예제 09.pptx  기본예제 14.pptx  기본예제 15.pptx  기본예제 16.pptx  기본예제 19.pptx  기본예제 20.pptx  연습문제.pptx  종합예제 1.pptx  종합예제 3.pptx
ComputerHangul/중간고사/: 김동현(202327005)중간고사.hwpx
Dino/: .gitignore  CMakeLists.txt  dino.c  dinogame.c  game.c  main.c  main.h  mazegame.c  menu.c  render.c  screen.c  utills.c
Dino/inc/: data.h  dino.h  render.h  screen.h  utills.h
DinoProject/: main.c
DinoRun/: ASCII_ART_SAMPLE  CMakeLists.txt  Guide.txt  add.c  console.c  console.h  data.h  game.c  game.h  main.c  menu.c  sub.c
DinoRunOne/: DinoRun.c  TEXT_SAMPLE.txt
HTML/: div_box.html
Python/: pythondata.csv  vegetable.csv
(+57 files in other folders)
